# autoget

./: README.md
.github/workflows/: release.yml
autoget/: Cargo.toml
autoget/src/: lib.rs
tests/: Cargo.toml
tests/src/: lib.rs
