[package]
name = "autoget"
version = "0.1.1"
edition = "2021"
authors = ["zianksm"]
description = "A simple macro to generate getters for structs"
keywords = ["macro", "getter", "struct"]
readme = "../README.md"
license = "Apache-2.0"
repository = "https://github.com/zianksm/autoget"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.32"
syn = { version = "2.0.27", features = ["full"] }


[lib]
proc-macro = true
